--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: Build
 on:
   workflow_dispatch:
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
     paths: ['src/**/*', '.github/workflows/ci.yml' ]
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths: ['src/**/*', '.github/workflows/ci.yml' ]
 
 jobs:
@@ -24,14 +24,22 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Install .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '7.0'
+
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.1.3
+   
+    - name: Restore NuGet packages
+      run: dotnet restore ${{ env.CSPROJ_PATH }} --runtime ${{ env.RID }}
 
     - name: Restore
-      run: msbuild ${{ env.SLN_PATH }} /t:Restore /p:Configuration=${{ env.BUILD_CONFIGURATION }}
-      
+      run: msbuild ${{ env.CSPROJ_PATH }} /t:Restore /p:Configuration=${{ env.BUILD_CONFIGURATION }}
+
     - name: Build
-      run: msbuild ${{ env.SLN_PATH }} /p:Configuration=${{ env.BUILD_CONFIGURATION }} /p:RuntimeIdentifier=${{ env.RID }}
+      run: msbuild ${{ env.CSPROJ_PATH }} /p:Configuration=${{ env.BUILD_CONFIGURATION }} /p:RuntimeIdentifier=${{ env.RID }}
 
     - uses: actions/upload-artifact@v3
       with:
