--- a/src/RdpProtocolHandler/RdpProtocolHandler.csproj
+++ b/src/RdpProtocolHandler/RdpProtocolHandler.csproj
@@ -65,11 +65,15 @@
     <Content Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="NLog.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
     <None Include="test.reg" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NLog">
+      <Version>5.1.3</Version>
+    </PackageReference>
+    <PackageReference Include="NLog.Schema">
+      <Version>5.1.3</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
