--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,11 @@ jobs:
       id: version-creator
       run: |
         $buildDay = Get-Date -Format "yyyy.Mdd"
-        $runNumber = "$env:GITHUB_RUN_NUMBER"
-        $ver = $buildDay + "." + $runNumber + ".0"
+        $ver = "$buildDay.${{ github.RUN_NUMBER }}.0"
 
         echo "app_ver_output=$ver" >> $GITHUB_OUTPUT
         echo "app_ver_var=$ver" >> $GITHUB_ENV
+        echo "SELECTED_COLOR=green" >> $GITHUB_OUTPUT
 
     - name: Use the value
       id: step_two
@@ -40,6 +40,7 @@ jobs:
         echo "old style run_number: $env:GITHUB_RUN_NUMBER"
         echo "new style run_number: ${{ github.RUN_NUMBER }}"
         
+        echo "The selected color is ${{ steps.random-color-generator.outputs.SELECTED_COLOR }}"
         echo "app_ver_var: ${{ env.app_ver_var }}"
         echo "app_ver_output: ${{ steps.version-creator.outputs.app_ver_output }}"
 
