--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,7 @@ jobs:
         $buildDay = Get-Date -Format "yyyy.Mdd"
         $ver = "$buildDay.${{ github.RUN_NUMBER }}.0"
 
-        echo "app_ver_output=$ver" >> $GITHUB_OUTPUT
-        echo "app_ver_var=$ver" >> $GITHUB_ENV
-        echo "SELECTED_COLOR=green" >> $GITHUB_OUTPUT
+        echo "::set-output name=APP_VERSION::$ver"
 
     - name: Use the value
       id: step_two
@@ -40,9 +38,7 @@ jobs:
         echo "old style run_number: $env:GITHUB_RUN_NUMBER"
         echo "new style run_number: ${{ github.RUN_NUMBER }}"
         
-        echo "The selected color is ${{ steps.random-color-generator.outputs.SELECTED_COLOR }}"
-        echo "app_ver_var: ${{ env.app_ver_var }}"
-        echo "app_ver_output: ${{ steps.version-creator.outputs.app_ver_output }}"
+        echo "Set output ${{ steps.random-color-generator.outputs.APP_VERSION }}"
 
     - name: Install .NET
       uses: actions/setup-dotnet@v3
