--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,15 +30,16 @@ jobs:
         $buildDay = Get-Date -Format "yyyy.Mdd"
         $ver = "$buildDay.${{ github.RUN_NUMBER }}.0"
 
+        echo "SELECTED_COLOR=green" >> $GITHUB_ENV
+        echo "ACTION_STATE=yellow" >> $GITHUB_OUTPUT
         echo "::set-output name=APP_VERSION::$ver"
 
     - name: Use the value
       id: step_two
       run: |
-        echo "old style run_number: $env:GITHUB_RUN_NUMBER"
-        echo "new style run_number: ${{ github.RUN_NUMBER }}"
-        
-        echo "Set output ${{ steps.random-color-generator.outputs.APP_VERSION }}"
+        echo "New set output ${{ steps.version-creator.outputs.action_state }}"
+        echo "Old set output ${{ steps.version-creator.outputs.APP_VERSION }}"
+        echo "The selected color is ${{ env.SELECTED_COLOR }}"
 
     - name: Install .NET
       uses: actions/setup-dotnet@v3
