--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,13 +31,6 @@ jobs:
         $ver = "$buildDay" + "." + "${{ github.RUN_NUMBER }}" + ".0"
         echo "::set-output name=APP_VERSION::$ver"
 
-    - name: Use the value
-      id: step_two
-      run: |
-        echo "ACTION_STATE output ${{ steps.version-creator.outputs.action_state }}"
-        echo "APP_VERSION output ${{ steps.version-creator.outputs.APP_VERSION }}"
-        echo "SELECTED_COLOR env var ${{ env.SELECTED_COLOR }}"
-
     - name: Install .NET
       uses: actions/setup-dotnet@v3
       with:
@@ -57,5 +50,5 @@ jobs:
 
     - uses: actions/upload-artifact@v3
       with:
-        name: app
+        name: RdpProtocolHandler_UnsignedMaster
         path: src/RdpProtocolHandler/bin/Release
