--- a/src/RdpProtocolHandler/RdpProtocolHandler.csproj
+++ b/src/RdpProtocolHandler/RdpProtocolHandler.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{9BCAEE56-8E0E-4156-9FB8-A1203E2001F9}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KonradSikorski.Tools.RdpProtocolHandler</RootNamespace>
+    <RootNamespace>RdpProtocolHandler</RootNamespace>
     <AssemblyName>RdpProtocolHandler</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -39,9 +39,6 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog, Version=5.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.5.1.3\lib\net46\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -54,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppConstants.cs" />
     <Compile Include="ConsoleWrapper.cs" />
     <Compile Include="InstallationHelper.cs" />
     <Compile Include="LogHelper.cs" />
