--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,7 +98,13 @@ jobs:
     - name: ZIP up artifact
       id: zipper
       run: |
-        Copy-Item -Path ".scripts\*.*" -Destination ".\"
+        # Copy the installation scripts
+        Copy-Item -Path ".scripts\*.*" -Destination "src\RdpProtocolHandler\bin\Release\"
+
+        # Copy the help page
+        Copy-Item -Path ".github\other\releasebody.md" -Destination "src\RdpProtocolHandler\bin\Release\"
+
+        # zip everything up
         Compress-Archive -Path "src\RdpProtocolHandler\bin\Release\*" -DestinationPath "RdpProtocolHandler_${{ steps.version-creator.outputs.APP_VERSION }}_${{ env.RID }}.zip"
 
     - name: Create GitHub Release
