--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Build project
       run: msbuild ${{ env.CSPROJ_PATH }} /p:Configuration=${{ env.BUILD_CONFIGURATION }} /p:RuntimeIdentifier=${{ env.RID }}
     
-    - name: Copy Extra Content to Build Output
+    - name: Copy Scripts and Release Content to Build Output
       run: |
         # Copy the installation scripts
         Copy-Item -Path ".scripts\install.ps1" -Destination "src\RdpProtocolHandler\bin\Release\"
@@ -86,19 +86,24 @@ jobs:
         certificate-data: ${{ secrets.LANCELOT_PFX_DATA }}
         certificate-password: ${{ secrets.LANCELOT_PFX_PASSWORD }}
 
-    - name: Code Sign Installation script
-      uses: lando/code-sign-action@v2
-      with:
-        file: .scripts\install.ps1
-        certificate-data: ${{ secrets.LANCELOT_PFX_DATA }}
-        certificate-password: ${{ secrets.LANCELOT_PFX_PASSWORD }}
-
-    - name: Code Sign Uninstallation script
-      uses: lando/code-sign-action@v2
-      with:
-        file: .scripts\uninstall.ps1
-        certificate-data: ${{ secrets.LANCELOT_PFX_DATA }}
-        certificate-password: ${{ secrets.LANCELOT_PFX_PASSWORD }}
+    - name: Code Sign Scripts
+      run: |
+        $pfxCertFilePath = Join-Path -Path $PSScriptRoot -ChildPath "CodeSigningCertificate.pfx"
+        Set-Content -Value $([System.Convert]::FromBase64String(${{ secrets.LANCELOT_PFX_DATA }})) -Path $pfxCertFilePath -Encoding Byte
+        $codeSigningCert = Import-PfxCertificate -FilePath $pfxCertFilePath -Password $(${{ secrets.LANCELOT_PFX_PASSWORD }} | ConvertTo-SecureString -AsPlainText -Force) -CertStoreLocation Cert:\CurrentUser\My
+        $scripts = Get-ChildItem -Path "src\RdpProtocolHandler\bin\Release\" -Filter "*.ps1" -Recurse -ErrorAction Stop
+        $codeSigningCert = Get-ChildItem Cert:\CurrentUser\My -CodeSigningCert | Select-Object -First 1
+        foreach ($script in $scripts) {
+          try {
+                $scriptContent = Get-Content -Path $script.FullName
+                Write-Output "Signing script `"$($script.Name)`" with certificate `"$($codeSigningCert.Thumbprint)`""
+                # sign script
+                $null = Set-AuthenticodeSignature -Certificate $codeSigningCert -FilePath $script.FullName -TimestampServer "http://timestamp.digicert.com/"
+          }
+          catch {
+              Write-Error $_
+          }
+        }
 
 # *********** PUBLISH *********** #
 
