--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
         $buildDay = Get-Date -Format "yyyy.Mdd"
         $ver = "$buildDay" + "." + "${{ github.RUN_NUMBER }}" + ".0"
         echo "::set-output name=APP_VERSION::$ver"
-    
+
     - name: Update app's assembly version
       run: |
         function SetAssemblyFileVersion([string]$pathToFile, [string]$newVersion) {
@@ -57,6 +57,32 @@ jobs:
         }
         $assemblyInfoPath = "src\RdpProtocolHandler\Properties\AssemblyInfo.cs"
         SetAssemblyFileVersion $assemblyInfoPath "${{ steps.version-creator.outputs.APP_VERSION }}"
+
+    - name: Import code signing certificate
+      shell: powershell
+      run: |
+        $pfxCertFilePath = Join-Path -Path $PSScriptRoot -ChildPath "CodeSigningCertificate.pfx"
+        Set-Content -Value $([System.Convert]::FromBase64String($env:BASE64_PFX)) -Path $pfxCertFilePath -Encoding Byte
+        $codeSigningCert = Import-PfxCertificate -FilePath $pfxCertFilePath -Password $($env:PFX_PASSWORD | ConvertTo-SecureString -AsPlainText -Force) -CertStoreLocation Cert:\CurrentUser\My
+      env:
+        BASE64_PFX: ${{ secrets.LANCELOT_PFX_DATA }}
+        PFX_PASSWORD: ${{ secrets.LANCELOT_PFX_PASSWORD }}
+    
+    - name: Sign PowerShell Scripts
+      run: |
+        $scripts = Get-ChildItem -Path "src\RdpProtocolHandler\bin\Release\" -Filter "*.ps1" -Recurse -ErrorAction Stop
+        $codeSigningCert = Get-ChildItem Cert:\CurrentUser\My -CodeSigningCert | Select-Object -First 1
+        foreach ($script in $scripts) {
+          try {
+            $scriptContent = Get-Content -Path $script.FullName
+            Write-Output "Signing script `"$($script.Name)`" with certificate `"$($codeSigningCert.Thumbprint)`""
+            $null = Set-AuthenticodeSignature -Certificate $codeSigningCert -FilePath $script.FullName -TimestampServer "http://timestamp.digicert.com/"
+          }
+          catch {
+            Write-Error $_
+          }
+        }
+
 
 # *********** BUILD *********** #
 
@@ -85,31 +111,6 @@ jobs:
         file: src\RdpProtocolHandler\bin\Release\RdpProtocolHandler.exe
         certificate-data: ${{ secrets.LANCELOT_PFX_DATA }}
         certificate-password: ${{ secrets.LANCELOT_PFX_PASSWORD }}
-
-    - name: Code Sign Scripts
-      run: |
-        $pfxCertFilePath = Join-Path -Path $PSScriptRoot -ChildPath "CodeSigningCertificate.pfx"
-        $pfxData = ${{ secrets.LANCELOT_PFX_DATA }}
-        Set-Content -Value $([System.Convert]::FromBase64String($pfxData)) -Path $pfxCertFilePath -Encoding Byte
-
-        $pwd = ConvertTo-SecureString -String ${{ secrets.LANCELOT_PFX_PASSWORD }} -Force -AsPlainText
-        $codeSigningCert = Import-PfxCertificate -FilePath $pfxCertFilePath -Password $pwd -CertStoreLocation Cert:\CurrentUser\My
-
-        $codeSigningCert = Get-ChildItem Cert:\CurrentUser\My -CodeSigningCert | Select-Object -First 1
-        
-        $scripts = Get-ChildItem -Path "src\RdpProtocolHandler\bin\Release\" -Filter "*.ps1" -Recurse -ErrorAction Stop
-
-        foreach ($script in $scripts) {
-          try {
-                $scriptContent = Get-Content -Path $script.FullName
-                Write-Output "Signing script `"$($script.Name)`" with certificate `"$($codeSigningCert.Thumbprint)`""
-                # sign script
-                $null = Set-AuthenticodeSignature -Certificate $codeSigningCert -FilePath $script.FullName -TimestampServer "http://timestamp.digicert.com/"
-          }
-          catch {
-              Write-Error $_
-          }
-        }
 
 # *********** PUBLISH *********** #
 
