--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,7 +127,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: "v${{ steps.version-creator.outputs.APP_VERSION }}"
-        release_name: "Release ${{ steps.version-creator.outputs.APP_VERSION }}"
+        release_name: "RDP Protocol Handler v${{ steps.version-creator.outputs.APP_VERSION }}"
         body_path: .github\other\releasebody.md
 
     - name: Attach Release Asset
